--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -21,24 +21,34 @@ a {
 body {
 	font-size: 16px;
 	font-family: 'PingFang SC';
+	cursor: url(~@/assets/images/rose.png), auto;
 }
 
 ::-webkit-scrollbar {
 	width: 8px;
 	height: 8px;
-	background-color: transparent;
-}
-
-::-webkit-scrollbar-thumb {
-	background-color: #cccccc90;
-	border-radius: 8px;
-	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
 }
 
 ::-webkit-scrollbar-track {
-	background-color: #eee;
-	border-radius: 8px;
-	box-shadow: inset 0 0 3px rgba(0, 0, 0, 0.1);
+	background-color: rgba(73, 177, 245, 0.2);
+	border-radius: 32px;
+}
+
+::-webkit-scrollbar-thumb {
+	background-color: #49b1f5;
+	background-image: -webkit-linear-gradient(45deg,
+			rgba(255, 255, 255, 0.4) 25%,
+			transparent 25%,
+			transparent 50%,
+			rgba(255, 255, 255, 0.4) 50%,
+			rgba(255, 255, 255, 0.4) 75%,
+			transparent 75%,
+			transparent);
+	border-radius: 32px;
+}
+
+::-webkit-scrollbar-corner {
+	background-color: transparent;
 }
 
 /* ======================== Defined Style ======================== */
@@ -47,7 +57,49 @@ body {
 	margin: 0 auto;
 	width: 1200px;
 }
-
+// 大标题
+.headline{
+	position: relative;
+	margin: 0 0 20px 10px;
+	color: #333;
+	font-size: 20px;
+	transition: margin .5s ease-in-out;
+	&::before{
+		position: absolute;
+		left: -15px;
+		width: 5px;
+		height: 100%;
+		content: '';
+		background-color: #0094ff;
+	}
+	&:hover{
+		margin-left: 24px;
+	}
+}
+// 图片上传
+.img-uploader{
+	position: relative;
+	width: 178px;
+	height: 178px;
+	border: 1px dashed #d9d9d9;
+	border-radius: 6px;
+	overflow: hidden;
+	cursor: pointer;
+	&:hover{
+		border-color: #409EFF;
+	}
+	img{
+		width: 178px;
+		height: 178px;
+	}
+	.img-uploader-icon{
+		width: 178px;
+		line-height: 178px;
+		color: #8c939d;
+		font-size: 28px;
+		text-align: center;
+	}
+}
 /* ======================== Tool Class ======================== */
 // Display
 .d-none {
