--- a/src/style/common.scss
+++ b/src/style/common.scss
@@ -35,16 +35,14 @@ body {
 
 ::-webkit-scrollbar-thumb {
 	background-color: #49b1f5;
-	background-image: -webkit-linear-gradient(
-		45deg,
-		rgba(255, 255, 255, 0.4) 25%,
-		transparent 25%,
-		transparent 50%,
-		rgba(255, 255, 255, 0.4) 50%,
-		rgba(255, 255, 255, 0.4) 75%,
-		transparent 75%,
-		transparent
-	);
+	background-image: -webkit-linear-gradient(45deg,
+			rgba(255, 255, 255, 0.4) 25%,
+			transparent 25%,
+			transparent 50%,
+			rgba(255, 255, 255, 0.4) 50%,
+			rgba(255, 255, 255, 0.4) 75%,
+			transparent 75%,
+			transparent);
 	border-radius: 32px;
 }
 
@@ -57,59 +55,99 @@ body {
 .text-primary {
 	color: #409eff;
 }
+
 .text-success {
 	color: #67c23a;
 }
+
 .text-warning {
 	color: #e6a23c;
 }
+
 .text-danger {
 	color: #f56c6c;
 }
+
 .text-info {
 	color: #909399;
 }
+
 // 文字尺寸
 .text-1 {
 	font-size: 1rem;
 }
+
 .text-2 {
 	font-size: 2rem;
 }
+
 // 文字流光
 @keyframes hue {
 	from {
 		filter: hue-rotate(0);
 	}
+
 	to {
 		filter: hue-rotate(360deg);
 	}
 }
+
 // 版心
 .container {
 	margin: 0 auto;
 	width: 1200px;
+	min-width: 1200px;
 }
+
+// 卡片
+.card {
+	background-color: #fff;
+	overflow: hidden;
+	border: 1px solid #ebeef5;
+	border-radius: 4px;
+	box-shadow: 0 2px 12px 0 rgba(0, 0, 0, .1);
+}
+
+// Sizing
+.w-20 {
+	width: 20% !important;
+}
+
+.w-40 {
+	width: 40% !important;
+}
+
+.w-48 {
+	width: 48% !important;
+}
+
+.min-h-800 {
+	min-height: 800px;
+}
+
 // 大标题
 .headline {
 	position: relative;
-	margin: 0 0 20px 10px;
+	padding-left: 15px;
 	color: #333;
 	font-size: 20px;
 	transition: margin 0.5s ease-in-out;
+
 	&::before {
 		position: absolute;
-		left: -15px;
+		left: 0;
 		width: 5px;
 		height: 100%;
 		content: '';
 		background-color: #0094ff;
 	}
+
 	&:hover {
 		margin-left: 24px;
 		opacity: 0.7;
 	}
 }
+
 // 图片上传
 .img-uploader {
 	position: relative;
@@ -119,13 +157,16 @@ body {
 	border-radius: 6px;
 	overflow: hidden;
 	cursor: pointer;
+
 	&:hover {
 		border-color: #409eff;
 	}
+
 	img {
 		width: 178px;
 		height: 178px;
 	}
+
 	.img-uploader-icon {
 		width: 178px;
 		line-height: 178px;
@@ -134,6 +175,7 @@ body {
 		text-align: center;
 	}
 }
+
 /* ======================== Tool Class ======================== */
 // Display
 .d-none {
